# benchmark

./: CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  COMPETITOR_ANALYSIS.md  CONTRIBUTING.md  README.md  SECURITY.md  add_competitors.patch  gdi-petey-bronked.txt  linux-instructions.txt  plot-bench.py  plot-cross-platform-adv.py  plot-cross-platform.py  plot-dashboard-ratios.py  plot-dashboard.py  plot-quality.py  requirements.txt  run-bench.ps1  temp.txt
analysis/: competitor-overview.py  competitor-survey.csv  plot-competitor-landscape.py  plot-competitor-radar.py
build-clang/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rng_bench
build-gcc/: rng_bench
build-mingw/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  rng_bench.sln  rng_bench.vcxproj  rng_bench.vcxproj.filters
build-ninja/: CMakeCache.txt  build.ninja  cmake_install.cmake
docs/: expose_c_api.md  integration_instructions.md
include/: csimd_algos.h  universal_rng_capi.h
results/: bench_all_linux-clang.csv  bench_all_linux-gcc.csv  bench_all_linux-gcc_csimd_v1_7.csv  bench_all_windows-msvc.csv  bench_all_windows-msvc_csimd_v1_7.csv  bench_all_windows-msys2.csv  bench_pcg32_2025-10-29_05-26-47.csv  bench_ranlux48_2025-10-29_05-26-47.csv  bench_std_minstd_2025-10-29_05-26-47.csv  bench_std_mt19937_2025-10-29_05-26-47.csv  bench_std_mt19937_64_2025-10-29_05-26-47.csv  (+3 more)
src/: main.cpp
(+32 files in other folders)
